116070 fix usages of deprecated APIs in cnd/core